--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,35 @@
-# History files
-.Rhistory
-.Rapp.history
-
-# Session Data files
-.RData
-.RDataTmp
-
-# User-specific files
-.Ruserdata
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
 # RStudio files
 .Rproj.user/
+.Rhistory
+.Rdata
+.Ruserdata
+.Rapp.history
 
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
+# macOS system files
+.DS_Store
 
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
+# HTML preview files (if any)
+*.htmlpreview
 
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
+# Logs and other output
+*.log
+*.aux
+*.out
+*.toc
 
-# Temporary files created by R markdown
+# Temporary files
+*.tmp
+*.swp
+*~
+
+# Cache
+__pycache__/
+.Rcheck/
+
+# Markdown backup
 *.utf8.md
 *.knit.md
 
-# R Environment Variables
-.Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
+# Personal tokens or credentials
+*.env
+*.Renviron
